# Correlator

./: .dockerignore  .gitignore  404.html  Changelog.md  Dockerfile  LICENSE.txt  OSS_STATUS.md  README.md  config.json  index.html  mkdocs.yml  objects.inv  process.py  process_logfile.py  pyproject.toml  requirements.txt  syslog_server.py  syslog_server_cli.py  todo.md
Correlator/: app_config.py  bravura.py  bravura_logfile.py  bravura_syslog.py  caputil.py  cli.py  config.py  config_store.py  core.py  engine.py  event.py  eventtool.py  global_config.py  input_processor.py  logfile.py  mediator.py  mediator_pb2.py  reactor.py  runtime_config.py  server_common.py  stack.py  sysconfig.py  syslog.py  syslog_server.py  util.py
Correlator/Event/: core.py  csv.py  csv_writer.py  log.py  mail_sender.py  sms_sender.py
Correlator/Module/: capture.py  discovery.py  report.py  sshd.py  transmission.py  ucpath.py  ucpath_queue.py
Correlator/Templates/: email-error.mako  email-notice.mako  email-warning.mako  email.mako  mail_sender-html.mako  mail_sender-text.mako
Event/: core.py
Frontend/: logfile.py  syslog.py
Module/: capture.py  discovery.py  report.py  ucpath_queue.py
Notify/: notify.py
architecture/: index.html
common/: event.py  logfile.py  syslog.py  util.py
data/: firstrun.cap  i280-fail.cap  sshd-1.cap  sudo.cap
docs/: architecture.md  csv-handler.md  email-handler.md  event-system.md  features.md  frontend.md  implementation.md  index.md  installation.md  logback-handler.md  logfile-processor.md  modules.md  quickstart.md  reference.md  report-module.md  sshd-module.md  sshd.md  stack.md  syslog-server.md  why.md
extra/: README.md  banner.txt  show_banner.sh  start_container.sh  start_correlator_container.sh
lib/: util.py
py/: log.py  notify.py  ucpath_queue.py
python/: logfile.py  notify.py  syslog.py  util.py
quickstart/: index.html
reference/: index.html
sshd/: index.html
why/: index.html
(+9 files in other folders)
