[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Correlator"
description = "Log data processing library"
readme = "README.md"

version = "0.0.3"
dependencies = [
    "iso8601",
    "Mako",
    "MarkupSafe"
]
authors = [
    { name = "Tim Pushor", email = 'tim.pushor@gmail.com' }
]
maintainers = [
    { name = "Tim Pushor", email = 'tim.pushor@gmail.com' }
]

[tool.setuptools.packages.find]
include = ["Correlator*"]

[project.scripts]
syslog_server = "Correlator.syslog_server:cli"


