[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Correlator"
description = "System log data processing library"
readme = "README.md"

version = "0.0.4"
dependencies = [
    "iso8601",
    "Mako",
    "MarkupSafe",
    "setuptools>=67.0.0",
    "keyring==23.13.1",
    "twilio==8.0.0"

]
authors = [
    { name = "Tim Pushor", email = 'tim.pushor@gmail.com' }
]
maintainers = [
    { name = "Tim Pushor", email = 'tim.pushor@gmail.com' }
]

[tool.setuptools.package-data]
"*" = ["*.mako"]

[tool.setuptools.packages.find]
include = ["Correlator*"]

[project.scripts]
syslog_server = "Correlator.syslog_server:cli"
caputil = "Correlator.caputil:cli"


